# llm-management

./: .env.example  .gitignore  AGENTS.md  DEVELOPMENT_GUIDE.md  LLM-PRD.md  README.md  docker-compose.yml  implementation_plan.md  manage.ps1  seed_dataset.py  task_payload.json
.claude/: settings.local.json
infra/k8s/: api-gateway.yaml  configmap.yaml  namespace.yaml  secrets.yaml  services.yaml
infra/migrations/: alembic.ini  env.py
infra/migrations/versions/: 001_initial_schema.py
scripts/: seed_agent_dataset.py  start.ps1  status.ps1  stop.ps1  test_agent.py
services/ai-agent-runner/: Dockerfile  pyproject.toml
services/ai-agent-runner/ai_agent_runner/: diagnosis_agent.py  executor.py  main.py  tools.py
services/ai-agent-runner/ai_agent_runner/agents/: anthropic_agent.py  langgraph_agent.py
services/ai-agent-runner/ai_agent_runner/routers/: diagnose.py  execute.py
services/ai-agent-runner/tests/: test_diagnosis_agent.py
services/aiops-service/: Dockerfile  pyproject.toml
services/aiops-service/aiops_service/: main.py  rules.py
services/aiops-service/aiops_service/detectors/: anomaly_detector.py
services/aiops-service/aiops_service/routers/: events.py  metrics.py  reports.py  rules.py
services/aiops-service/tests/: test_rules.py
services/api-gateway/: Dockerfile  pyproject.toml
services/api-gateway/api_gateway/: auth.py  config.py  main.py  proxy.py
services/api-gateway/api_gateway/routers/: aiops.py  artifacts.py  auth_router.py  comparison.py  models.py
services/artifact-service/: Dockerfile  pyproject.toml
services/artifact-service/artifact_service/: database.py  main.py
services/artifact-service/artifact_service/analyzers/: dependency_analyzer.py
services/artifact-service/artifact_service/routers/: artifacts.py
services/artifact-service/tests/: test_dependency_analyzer.py
services/comparison-engine/: Dockerfile  list_anthropic_models.py  pyproject.toml  test_connection.py
services/comparison-engine/comparison_engine/: agent_runner.py  cost.py  main.py  metrics.py  progress.py  recommender.py  runner.py  worker.py
services/comparison-engine/comparison_engine/routers/: datasets.py  reports.py  tasks.py  ws.py
services/comparison-engine/tests/: test_cost.py  test_metrics.py  test_recommender.py
services/llm-adapter/: pyproject.toml
services/llm-adapter/llm_adapter/: __init__.py  anthropic_adapter.py  base.py  factory.py  ollama_adapter.py  openai_compat_adapter.py  tool_converter.py
services/llm-adapter/tests/: test_anthropic_adapter.py  test_factory.py  test_openai_compat_adapter.py  test_tool_converter.py
services/model-registry-service/: Dockerfile  pyproject.toml
services/model-registry-service/model_registry_service/: database.py  main.py  ollama_importer.py  security.py
services/model-registry-service/model_registry_service/routers/: health.py  models.py
services/model-registry-service/tests/: test_ollama_importer.py
web/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
web/app/: DashboardContent.tsx  globals.css  layout.tsx  page.tsx
web/app/agents/: page.tsx
web/app/aiops/: page.tsx
web/app/compare/: page.tsx
web/app/datasets/: page.tsx
web/app/models/: page.tsx
web/components/dashboard/: StatsCard.tsx
web/components/layout/: Header.tsx  Sidebar.tsx
web/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Table.tsx
web/lib/: api.ts  modelCatalog.ts
