[tool.poetry]
name = "comparison-engine"
version = "1.0.0"
description = "Multi-model comparison engine with parallel execution and reporting"
authors = ["Seungha Lee <lesh915@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.32"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.30"
pydantic = "^2.0"
httpx = "^0.27"
celery = {extras = ["redis"], version = "^5.4"}
redis = {extras = ["hiredis"], version = "^5.0"}
boto3 = "^1.35"
anthropic = "^0.50"
openai = "^1.50"
cryptography = "^43.0"
shared-types = {path = "../../packages/shared-types", develop = true}
llm-adapter  = {path = "../../services/llm-adapter", develop = true}

[tool.poetry.dev-dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"
pytest-mock = "^3.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
