[tool.poetry]
name = "model-registry-service"
version = "1.0.0"
description = "LLM model metadata registry service"
authors = ["Seungha Lee <lesh915@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.32"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.30"
pydantic = "^2.0"
httpx = "^0.27"
cryptography = "^43.0"
shared-types = {path = "../../packages/shared-types", develop = true}

[tool.poetry.dev-dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"
httpx = "^0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
